# geotiff_map_viewer

./: CMakeLists.txt  Main.qml  README.md  geotiffhandler.cpp  geotiffhandler.h  geotiffimageprovider.cpp  geotiffimageprovider.h  main.cpp
qml/: Main.qml
src/: appconfig.cpp  appconfig.h  geotiffhandler.cpp  geotiffimageprovider.cpp  geotiffoverlay.cpp  geotiffoverlay.h  geotiffquickitem.cpp  geotiffquickitem.h  main.cpp  thunderforestconfigserver.cpp  thunderforestconfigserver.h
